###################################################
Date: 15/06/2016
What:
    feat: import and export of configuration (click process and points to click on) from/to JSON files in a dedicated app's folder
###################################################
Date: 15/06/2016
What:
    feat: prevent the screen to be off, and force it to be on if off
    test: add instrumented tests and unit tests for feature about the screen
    feat: unlock script
    feat: references to web pages about how to root devices
    chore: clean up logs
    chore: update verbatims
    chore: update the credits view
    doc: new build of HTML JavaDoc
    chore: closed tasks #67, #68, #74, #81, #70, #71
###################################################
Date: 16/06/2016
What:
    feat: standalone mode with only config and points files
    feat: standalone mode with config and points file and screen recognition
    feat: possible to choose the time unit in use (ms, s or h)
    feat: intro screen can be called as an help from the settings screen
    fix: fixed bug with broken json files during import
    test: new UT and IT for standalone modes
    doc: new build of HTML JavaDoc
    chore: new run of Lint and code analysis
    chore: closed tasks #75, #76, #73, #72
###################################################
Date:
What:
    chore: closed tasks #69
###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################