@@ -98,4 +98,5 @@ v1.10.0 : Incredible Indri [on going]
     - Standalone mode with points and config files and screen recognition
     - Possible to choose its time unit for the click process (ms, s or h)
     - The intro screen is available from the settings screen as an help
-    - Refound main view
+    - Refactor main view
+    - Update credits view
